0.0.1 branch (#1)
* First partial implementation

* Adds ability to ignore some test methods + Fixes bug in createMockFile

* Fixes another bug in createMockFile

* test now supports file providers with time precision != 0

* Removes unwanted System.out

* Separates deleteFile & deleteFolder in UnderlyingFileSystem

* Moves test for AbstractNonWritableFileProviderTestTest from sync4j

* Implements testChangesUnderlyingFileSystem & api changes

* Adds a test in AbstractFileProviderTest testGet

* Adds javadoc, finishes pom for deployment